--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "lib": ["es7", "dom", "ESNext.AsyncIterable"],
     "typeRoots": ["./node_modules/@types"]
   },
-  "include": ["./src/**/*.ts", "ormconfig.ts"],
+  "include": ["./src/**/*.ts", "ormconfig.ts", "./src/CustomNamingStrategy.ts"],
   "exclude": ["node_modules", "./public", "dist", "test"],
   "linterOptions": {
     "exclude": []
