--- a/package.json
+++ b/package.json
@@ -1,78 +1,87 @@
 {
-  "name": "tsed-api-boilerplate",
-  "version": "0.0.1",
-  "description": "",
-  "scripts": {
-    "build": "yarn run tsc",
-    "tsc": "tsc --project tsconfig.compile.json",
-    "tsc:w": "tsc --project tsconfig.json -w",
-    "start": "tsnd --inspect --ignore-watch node_modules --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
-    "start:prod": "cross-env NODE_ENV=production node dist/index.js",
-    "test": "yarn run test:lint && yarn run test:coverage",
-    "test:unit": "cross-env NODE_ENV=test jest",
-    "test:coverage": "yarn run test:unit",
-    "test:lint": "eslint src --ext .ts",
-    "test:lint:fix": "eslint src --ext .ts --fix",
-    "prettier": "prettier '{src,test}/**/*.ts' --write",
-    "seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config",
-    "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed",
-    "typeorm": "tsed typeorm",
-    "typeorm:runmig": "ts-node --transpile-only ./node_modules/typeorm/cli.js"
-  },
-  "dependencies": {
-    "@tsed/ajv": "^6.62.0",
-    "@tsed/common": "^6.62.0",
-    "@tsed/core": "^6.62.0",
-    "@tsed/di": "^6.62.0",
-    "@tsed/exceptions": "^6.62.0",
-    "@tsed/json-mapper": "^6.62.0",
-    "@tsed/platform-express": "^6.62.0",
-    "@tsed/schema": "^6.62.0",
-    "@tsed/swagger": "^6.62.0",
-    "@tsed/typeorm": "^6.62.0",
-    "ajv": "^8.6.2",
-    "body-parser": "^1.19.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "method-override": "^3.0.0",
-    "mssql": "^7.2.0",
-    "typeorm": "^0.2.36",
-    "typeorm-seeding": "^1.6.1"
-  },
-  "devDependencies": {
-    "@tsed/cli-plugin-eslint": "3.4.12",
-    "@tsed/cli-plugin-jest": "3.4.12",
-    "@tsed/cli-plugin-typeorm": "3.4.12",
-    "@types/compression": "^1.7.1",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/faker": "^5.5.7",
-    "@types/jest": "^26.0.24",
-    "@types/method-override": "^0.0.32",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^16.4.10",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^27.0.6",
-    "prettier": "^2.3.2",
-    "supertest": "^6.1.4",
-    "ts-jest": "^27.0.4",
-    "ts-node": "^10.1.0",
-    "ts-node-dev": "^1.1.8",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
-  },
-  "tsed": {
-    "packageManager": "yarn",
-    "convention": "default"
-  }
+	"name": "tsed-api-boilerplate",
+	"version": "0.0.1",
+	"description": "",
+	"scripts": {
+		"build": "npm run tsc --project tsconfig.compile.json",
+		"build:w": "tsc --project tsconfig.compile.json -w",
+		"start": "tsnd --inspect --ignore-watch node_modules --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
+		"start:prod": "cross-env NODE_ENV=production node dist/index.js",
+		"test": "npm run test:lint && npm run test:coverage",
+		"test:unit": "cross-env NODE_ENV=test jest",
+		"test:coverage": "npm run test:unit",
+		"test:lint": "eslint src --ext .ts",
+		"test:lint:fix": "eslint src --ext .ts --fix",
+		"prettier": "prettier '{src,test}/**/*.ts' --write",
+		"seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config",
+		"seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed",
+		"typeorm": "tsed typeorm",
+		"typeorm:runmig": "ts-node --transpile-only ./node_modules/typeorm/cli.js"
+	},
+	"dependencies": {
+		"@tsed/ajv": "^7.0.0-beta.3",
+		"@tsed/common": "^7.0.0-beta.3",
+		"@tsed/core": "^7.0.0-beta.3",
+		"@tsed/di": "^7.0.0-beta.3",
+		"@tsed/exceptions": "^7.0.0-beta.3",
+		"@tsed/json-mapper": "^7.0.0-beta.3",
+		"@tsed/platform-express": "^7.0.0-beta.3",
+		"@tsed/schema": "^7.0.0-beta.3",
+		"@tsed/socketio": "^7.0.0-beta.3",
+		"@tsed/swagger": "^7.0.0-beta.3",
+		"@tsed/typeorm": "^7.0.0-beta.3",
+		"ajv": "^8.8.2",
+		"body-parser": "^1.19.1",
+		"compression": "^1.7.4",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"cross-env": "^7.0.3",
+		"dotenv": "^10.0.0",
+		"express": "^4.17.2",
+		"method-override": "^3.0.0",
+		"mssql": "^7.3.0",
+		"socket.io": "^4.4.0",
+		"typeorm": "^0.2.41"
+	},
+	"devDependencies": {
+		"@tsed/cli-plugin-eslint": "3.16.0",
+		"@tsed/cli-plugin-jest": "3.16.0",
+		"@tsed/cli-plugin-typeorm": "3.16.0",
+		"@types/compression": "^1.7.2",
+		"@types/cookie-parser": "^1.4.2",
+		"@types/cors": "^2.8.12",
+		"@types/express": "^4.17.13",
+		"@types/jest": "^27.4.0",
+		"@types/method-override": "^0.0.32",
+		"@types/multer": "^1.4.7",
+		"@types/node": "^17.0.5",
+		"@types/supertest": "^2.0.11",
+		"@typescript-eslint/eslint-plugin": "^5.8.1",
+		"@typescript-eslint/parser": "^5.8.1",
+		"eslint": "^8.6.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"husky": "^7.0.4",
+		"jest": "^27.4.5",
+		"lint-staged": "^12.1.4",
+		"prettier": "^2.5.1",
+		"supertest": "^6.1.6",
+		"ts-jest": "^27.1.2",
+		"ts-node": "^10.4.0",
+		"ts-node-dev": "^1.1.8",
+		"tsconfig-paths": "^3.12.0",
+		"tslib": "^2.3.1",
+		"typescript": "^4.5.4"
+	},
+	"tsed": {
+		"packageManager": "npm",
+		"convention": "default",
+		"architecture": "default"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged",
+			"post-commit": "git update-index --again"
+		}
+	}
 }
