--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,31 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "module": "commonjs",
-    "target": "esnext",
-    "sourceMap": true,
-    "declaration": false,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "moduleResolution": "node",
-    "isolatedModules": false,
-    "suppressImplicitAnyIndexErrors": false,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "allowSyntheticDefaultImports": true,
-    "importHelpers": true,
-    "newLine": "LF",
-    "noEmit": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "lib": ["es7", "dom", "ESNext.AsyncIterable"],
-    "typeRoots": ["./node_modules/@types"]
-  },
-  "include": ["./src/**/*.ts", "ormconfig.ts", "./src/CustomNamingStrategy.ts"],
-  "exclude": ["node_modules", "./public", "dist", "test"],
-  "linterOptions": {
-    "exclude": []
-  }
+	"compilerOptions": {
+		"baseUrl": ".",
+		"module": "commonjs",
+		"target": "esnext",
+		"sourceMap": true,
+		"declaration": false,
+		"experimentalDecorators": true,
+		"emitDecoratorMetadata": true,
+		"moduleResolution": "node",
+		"isolatedModules": false,
+		"suppressImplicitAnyIndexErrors": false,
+		"noImplicitAny": true,
+		"strictNullChecks": true,
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
+		"allowSyntheticDefaultImports": true,
+		"importHelpers": true,
+		"newLine": "LF",
+		"noEmit": true,
+		"esModuleInterop": true,
+		"resolveJsonModule": true,
+		"lib": ["es7", "dom", "ESNext.AsyncIterable"],
+		"typeRoots": ["./node_modules/@types"]
+	},
+	"include": ["src/**/*.ts"],
+	"exclude": ["node_modules", "./public", "dist", "test"],
+	"linterOptions": {
+		"exclude": []
+	}
 }
