--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@tsed/swagger": "^7.0.0-beta.3",
 		"@tsed/typeorm": "^7.0.0-beta.3",
 		"ajv": "^8.8.2",
+		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.1",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.6",
@@ -38,8 +39,12 @@
 		"cross-env": "^7.0.3",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.2",
+		"jsonwebtoken": "^8.5.1",
 		"method-override": "^3.0.0",
 		"mssql": "^7.3.0",
+		"nodemailer": "^6.7.2",
+		"nodemailer-mailgun-transport": "^2.1.3",
+		"otplib": "^12.0.1",
 		"socket.io": "^4.4.0",
 		"typeorm": "^0.2.41"
 	},
@@ -47,14 +52,17 @@
 		"@tsed/cli-plugin-eslint": "3.16.0",
 		"@tsed/cli-plugin-jest": "3.16.0",
 		"@tsed/cli-plugin-typeorm": "3.16.0",
+		"@types/bcrypt": "^5.0.0",
 		"@types/compression": "^1.7.2",
 		"@types/cookie-parser": "^1.4.2",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/jest": "^27.4.0",
+		"@types/jsonwebtoken": "^8.5.6",
 		"@types/method-override": "^0.0.32",
 		"@types/multer": "^1.4.7",
 		"@types/node": "^17.0.5",
+		"@types/nodemailer": "^6.4.4",
 		"@types/supertest": "^2.0.11",
 		"@typescript-eslint/eslint-plugin": "^5.8.1",
 		"@typescript-eslint/parser": "^5.8.1",
@@ -71,6 +79,7 @@
 		"ts-node-dev": "^1.1.8",
 		"tsconfig-paths": "^3.12.0",
 		"tslib": "^2.3.1",
+		"typeorm-seeding": "^1.6.1",
 		"typescript": "^4.5.4"
 	},
 	"tsed": {
