--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"build": "npx tsc --project tsconfig.compile.json",
 		"build:w": "tsc --project tsconfig.compile.json -w",
 		"start": "tsnd --inspect --ignore-watch node_modules --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
-		"start:prod": "cross-env NODE_ENV=production node dist/index.js",
+		"start:prod": "cross-env NODE_ENV=production node dist/src/index.js",
 		"test": "npm run test:lint && npm run test:coverage",
 		"test:unit": "cross-env NODE_ENV=test jest",
 		"test:coverage": "npm run test:unit",
