--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
 	"version": "0.0.1",
 	"description": "",
 	"scripts": {
-		"build": "npx tsc --project tsconfig.compile.json",
+		"build": "npm run barrels:entities && npm run barrels:migrations && npm run barrels:seeds && npx tsc --project tsconfig.compile.json",
+		"barrels:entities": "npx barrelsby --delete -d ./src/entities -e .spec.ts -e .fixture.ts",
+		"barrels:migrations": "npx barrelsby --delete -d ./src/migrations -e .spec.ts -e .fixture.ts",
+		"barrels:seeds": "npx barrelsby --delete -d ./src/seeds -e .spec.ts -e .fixture.ts",
 		"build:w": "tsc --project tsconfig.compile.json -w",
 		"start": "tsnd --inspect --ignore-watch node_modules --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
-		"start:prod": "cross-env NODE_ENV=production node dist/src/index.js",
+		"start:prod": "cross-env NODE_ENV=production node dist/index.js",
 		"test": "npm run test:lint && npm run test:coverage",
 		"test:unit": "cross-env NODE_ENV=test jest",
 		"test:coverage": "npm run test:unit",
@@ -16,7 +19,7 @@
 		"seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config",
 		"seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed",
 		"typeorm": "tsed typeorm",
-		"typeorm:runmig": "ts-node --transpile-only ./node_modules/typeorm/cli.js"
+		"typeorm:runmig": "ts-node --transpile-only ./node_modules/typeorm/cli.js --config ./src/config/ormconfig.ts"
 	},
 	"dependencies": {
 		"@tsed/ajv": "^7.0.0-beta.3",
@@ -31,6 +34,7 @@
 		"@tsed/swagger": "^7.0.0-beta.3",
 		"@tsed/typeorm": "^7.0.0-beta.3",
 		"ajv": "^8.8.2",
+		"barrelsby": "^2.3.1",
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.1",
 		"compression": "^1.7.4",
