--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"description": "",
 	"scripts": {
-		"build": "npm run barrels:entities && npm run barrels:migrations && npm run barrels:seeds && npx tsc --project tsconfig.compile.json && npm run copy_views",
+		"build": "npm run barrels:entities && npm run barrels:migrations && npm run barrels:seeds && npx tsc --project tsconfig.compile.json && npm run copy_assets",
 		"barrels:entities": "npx barrelsby --delete -d ./src/entities -e .spec.ts -e .fixture.ts",
 		"barrels:migrations": "npx barrelsby --delete -d ./src/migrations -e .spec.ts -e .fixture.ts",
 		"barrels:seeds": "npx barrelsby --delete -d ./src/seeds -e .spec.ts -e .fixture.ts",
@@ -20,7 +20,7 @@
 		"seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed",
 		"typeorm": "tsed typeorm",
 		"typeorm:runmig": "ts-node --transpile-only ./node_modules/typeorm/cli.js --config ./src/config/ormconfig.ts",
-		"copy_views": "cp -r ./src/views dist"
+		"copy_assets": "cp -r ./src/views dist && cp -r ./src/public dist"
 	},
 	"dependencies": {
 		"@tsed/ajv": "^7.0.0-beta.3",
