--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
 		"nodemailer-mailgun-transport": "^2.1.3",
 		"otplib": "^12.0.1",
 		"socket.io": "^4.4.0",
-		"typeorm": "^0.2.41"
+		"typeorm": "^0.2.41",
+		"ua-parser-js": "^1.0.2"
 	},
 	"devDependencies": {
 		"@tsed/cli-plugin-eslint": "3.16.0",
@@ -66,6 +67,7 @@
 		"@types/node": "^17.0.5",
 		"@types/nodemailer": "^6.4.4",
 		"@types/supertest": "^2.0.11",
+		"@types/ua-parser-js": "^0.7.36",
 		"@typescript-eslint/eslint-plugin": "^5.8.1",
 		"@typescript-eslint/parser": "^5.8.1",
 		"eslint": "^8.6.0",
