--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"dependencies": {
 		"@tsed/ajv": "^7.0.0-beta.3",
+		"@tsed/async-hook-context": "^6.98.0",
 		"@tsed/common": "^7.0.0-beta.3",
 		"@tsed/core": "^7.0.0-beta.3",
 		"@tsed/di": "^7.0.0-beta.3",
